# 2048

./: .gitignore  CMakeLists.txt  README.md  board.h  program.cpp  subject.h
console/: console2048.cpp  console2048.h  main.cpp
core/: board.cpp  board.h  direction.h  game.cpp  game.h  observer.h  subject.cpp  subject.h
gui/: console2048.cpp  console2048.h  gui.pro  gui.vcxproj  gui.vcxproj.filters  gui2048.cpp  gui2048.h  main.cpp  qtile.cpp  qtile.h
msvc/: 2048.sln  2048.vcxproj  2048.vcxproj.filters  console.vcxproj  console.vcxproj.filters
